# dez

./: .gitignore  .gitmodules  ComplexSetoidPrototype.v  GroupEqPrototype.v  GroupSetoidPrototype.v  IsoDigression.v  LICENSE  Makefile  ModuleSetoidPrototype.v  ModuleSetoidSeminar.v  Props.v  Quasiprototype.v  README.md  RingEqPrototype.v  RingSetoidPrototype.v  Semiprototype.v  adapter.ml  adapter.mli  dune-project  habitat.dot  habitat.dot.h  notes.md  unification.dot
ape/: dune  (+10 more)
camel/: .gitignore  Extraction.v  Makefile  adapter.ml  adapter.mli  dune  server.ml  server.mli
fowl/: .gitignore  DatatypeTactics.v  Digression.v  Equations.v  GroupTheory.v  Init.v  Makefile  RewritingTactics.v  TypeclassTactics.v  dune  has.dot  is.dot  make.dot
fowl/Has/: Action.v  Actions.v  Addition.v  AlgebraicActions.v  AlgebraicForms.v  AlgebraicOperations.v  ApartnessRelation.v  ArithmeticAction.v  ArithmeticActions.v  ArithmeticOperation.v  ArithmeticOperations.v  Arithmetics.v  BinaryOperation.v  BinaryRelation.v  Cardinalities.v  CategoricalComposition.v  CategoricalIdentity.v  CategoricalInverse.v  CategoricalMorphism.v  CategoricalOperation.v  CategoricalOperations.v  CategoricalRelation.v  CategoricalRelations.v  ComposedMorphism.v  Decidability.v  Decisions.v  Distance.v  Distances.v  Endofunction.v  Enumerations.v  EquivalenceRelation.v  EquivalenceRelations.v  Form.v  Forms.v  Function.v  GradedAction.v  GradedBinaryOperation.v  GradedLeftAction.v  GradedNullaryOperation.v  GradedRightAction.v  (+68 more)
fowl/Is/: AbelianGroup.v  Absorbing.v  Antidistributive.v  Antisymmetric.v  Apart.v  Associative.v  AssociativeAlgebra.v  Asymmetric.v  Bijective.v  Bounded.v  Cancellative.v  CategoricalAssociative.v  CategoricalCategory.v  CategoricalGroupoid.v  CategoricalInvertible.v  CategoricalInvolutive.v  CategoricalLeftInvertible.v  CategoricalLeftUnital.v  CategoricalMagmoid.v  CategoricalRightInvertible.v  CategoricalRightUnital.v  CategoricalSemicategory.v  CategoricalUnital.v  Coherent.v  CoherentOrderRelations.v  Commutative.v  Comonotonic.v  Compatible.v  Connex.v  Contractible.v  Contractive.v  Cotransitive.v  Deflationary.v  Degenerate.v  Distributive.v  Equivalence.v  Expansive.v  Extensional.v  Finite.v  FiveSortedBihomogeneous.v  (+180 more)
fowl/Justifies/: BooleanTheorems.v  FreeTheorems.v  Indiscernibility.v  IntegerPowerTheorems.v  LogicalTheorems.v  NBinaryOddFactoring.v  NInverses.v  NPairingFunctions.v  NTheorems.v  NTriangularNumbers.v  OneSortedArithmetic.v  OneSortedEnumeration.v  OneSortedIntegerOperations.v  OneSortedNaturalOperations.v  OptionTheorems.v  PolynomialTheorems.v  PositiveMapTheorems.v  PositiveTheorems.v  ProductTheorems.v  RTheorems.v  TensorTheorems.v  UnitTheorems.v  ZTheorems.v
fowl/Offers/: IsomorphismMappings.v  OneSortedArithmetic.v  OneSortedEnumeration.v  OneSortedGradedArithmetic.v  OneSortedIntegerOperations.v  OneSortedNaturalOperations.v  OneSortedPositiveOperations.v  TwoSortedIsomorphismMappings.v
fowl/Provides/: BooleanTheorems.v  DatatypeTactics.v  FreeTheorems.v  IntegerPowerTheorems.v  LogicalTheorems.v  NBinaryOddFactoring.v  NInverses.v  NPairingFunctions.v  NTheorems.v  NTriangularNumbers.v  NaturalPairingFunctions.v  NumberTheoreticInverses.v  OneSortedArithmetic.v  OneSortedIntegerOperations.v  OneSortedNaturalOperations.v  OneSortedPositiveOperations.v  OptionTheorems.v  OrderTheorems.v  PolynomialTheorems.v  PositiveMapTheorems.v  PositivePairingFunctions.v  PositiveTheorems.v  ProductTheorems.v  TensorTheorems.v  TriangularNumbers.v  TypeclassTactics.v  UnitTheorems.v  ZTheorems.v
fowl/ShouldHave/: AdditiveNotations.v  ApartnessRelationNotations.v  ArithmeticNotations.v  BinaryRelationNotations.v  CategoricalNotations.v  CategoricalOperationNotations.v  CategoricalRelationNotations.v  CategoricalTypeNotations.v  EquivalenceNotations.v  EquivalenceRelationNotations.v  MorphismNotations.v  MultiplicativeNotations.v  OneSortedAdditiveNotations.v  OneSortedApartnessRelationNotations.v  OneSortedArithmeticNotations.v  OneSortedBinaryRelationNotations.v  OneSortedEquivalenceRelationNotations.v  OneSortedGradedAdditiveNotations.v  OneSortedGradedArithmeticNotations.v  OneSortedGradedMultiplicativeNotations.v  OneSortedLatticeNotations.v  OneSortedMultiplicativeNotations.v  OneSortedOrderRelationNotations.v  OneSortedStrictOrderRelationNotations.v  OrderRelationNotations.v  StrictOrderRelationNotations.v  TwoSortedAdditiveNotations.v  TwoSortedGradedAdditiveNotations.v  TwoSortedGradedMultiplicativeNotations.v  TwoSortedMultiplicativeNotations.v
fowl/ShouldOffer/: IsomorphismNotations.v  OneSortedAdditiveIntegerOperationNotations.v  OneSortedAdditiveNaturalOperationNotations.v  OneSortedAdditiveOperationNotations.v  OneSortedAdditivePositiveOperationNotations.v  OneSortedArithmeticIntegerOperationNotations.v  OneSortedArithmeticNaturalOperationNotations.v  OneSortedArithmeticNotations.v  OneSortedArithmeticOperationNotations.v  OneSortedArithmeticPositiveOperationNotations.v  OneSortedGradedArithmeticNotations.v  OneSortedMultiplicativeIntegerOperationNotations.v  OneSortedMultiplicativeNaturalOperationNotations.v  OneSortedMultiplicativeOperationNotations.v  OneSortedMultiplicativePositiveOperationNotations.v
fowl/Supports/: AdditiveNotations.v  ArithmeticNotations.v  BinaryRelationNotations.v  CategoricalOperationNotations.v  CategoricalRelationNotations.v  DistanceBarNotations.v  EquivalenceNotations.v  MorphismNotations.v  MultiplicativeNotations.v  OfferingOneSortedArithmeticNotations.v  OneSortedAdditiveIntegerOperationNotations.v  OneSortedAdditiveNaturalOperationNotations.v  OneSortedAdditiveNotations.v  OneSortedAdditivePositiveOperationNotations.v  OneSortedArithmeticIntegerOperationNotations.v  OneSortedArithmeticNaturalOperationNotations.v  OneSortedArithmeticNotations.v  OneSortedArithmeticOperationNotations.v  OneSortedArithmeticPositiveOperationNotations.v  OneSortedLatticeNotations.v  SizeBarNotations.v  (+9 more)
review/: Makefile  MonkeySaddle.thrift  notes.md  review.cabal
ungulate/: Extraction.v  Makefile  adapter.ml  dune  main.ml
(+1171 files in other folders)
