(include_subdirs qualified)

(coq.theory
  (name Maniunfold)
  ; TODO There is no public name for some reason.
  ; (public_name maniunfold.fowl)
  ; (package <package>)
  (synopsis "Formal Specification")
  ; (modules <ordered_set_lang>)
  ; (libraries <ocaml_libraries>)
  ; (flags <coq_flags>)
  ; TODO Put `coq-stdpp` here once external theories become supported.
  ; (theories <coq_theories>)
  )
