(library
  (name ungulate)
  (public_name maniunfold.ungulate)
  (synopsis "Utility Library for Common Tasks")
  ; (modules <modules>)
  ; (libraries <library-dependencies>)
  ; (wrapped <boolean>)
  ; (preprocess <preprocess-spec>)
  ; (preprocessor_deps (<deps-conf list>))
  ; (optional)
  ; (foreign_stubs <foreign-stubs-spec>)
  ; (foreign_archives <foreign-archives-list>)
  ; (install_c_headers (<names>))
  ; (modes <modes>)
  ; (no_dynlink)
  ; (kind <kind>)
  ; (ppx_runtime_libraries (<library-names>))
  ; (virtual_deps (<opam-packages>)
  ; (library_flags (<flags>))
  ; (c_library_flags <flags>)
  ; (modules_without_implementation <modules>)
  ; (private_modules <modules>)
  ; (allow_overlapping_dependencies)
  ; (enabled_if <blang expression>)
  ; (inline_tests)
  )
