(coq.theory
  (name Protofold)
  (public_name maniunfold.Protofold)
  (synopsis "OCaml extraction for Maniunfold.")
  (flags -Q ../theories Maniunfold))

(rule
  (targets extraction.ml)
  (deps (file theories/Init.vo) (file extraction/Extraction.vo))
  (action (echo "Custom rule fired.")))

(include_subdirs qualified)
